[gd_scene load_steps=2 format=3 uid="uid://wi8nqwqpg1g3"]

[ext_resource type="Script" path="res://Control.gd" id="1_7k8s6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -5.0
offset_right = 6.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7k8s6")

[node name="FileDialog_Load" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(498, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="Button_Load" type="Button" parent="."]
layout_mode = 0
offset_left = 959.0
offset_top = 47.0
offset_right = 1100.0
offset_bottom = 113.0
text = "Open"

[node name="Button_Process" type="Button" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 128.0
offset_right = 624.0
offset_bottom = 199.0
text = "Process"

[node name="LineEdit_Path" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 47.0
offset_right = 949.0
offset_bottom = 108.0
placeholder_text = "Path to gamelist.xml"

[node name="Label_Csv" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 491.0
offset_right = 206.0
offset_bottom = 545.0
text = "Path to csv file"

[node name="Label_Status" type="Label" parent="."]
layout_mode = 0
offset_left = 246.0
offset_top = 616.0
offset_right = 388.0
offset_bottom = 645.0
text = "Status:
"

[node name="Label_Current" type="Label" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 616.0
offset_right = 619.0
offset_bottom = 648.0

[node name="Label_Processed" type="Label" parent="."]
layout_mode = 0
offset_left = 901.0
offset_top = 488.0
offset_right = 1076.0
offset_bottom = 542.0
text = "Path to processed files"

[node name="Button_Csv" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 522.0
offset_right = 229.0
offset_bottom = 563.0
text = "csv/games.csv"

[node name="Button_Processed" type="Button" parent="."]
layout_mode = 0
offset_left = 902.0
offset_top = 526.0
offset_right = 1071.0
offset_bottom = 567.0

[connection signal="file_selected" from="FileDialog_Load" to="." method="_on_file_dialog_load_file_selected"]
[connection signal="pressed" from="Button_Load" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="Button_Process" to="." method="_on_button_process_pressed"]
[connection signal="pressed" from="Button_Csv" to="." method="_on_button_csv_pressed"]
[connection signal="pressed" from="Button_Processed" to="." method="_on_button_processed_pressed"]
